# Auto-Annotate

./: .gitignore  README.md  pyproject.toml
auto_annotator/: config.py  dedup.py  pipeline.py  review.py  runner.py  video_extractor.py
scripts/: setup_gdino.ps1
